[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Main_Menu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/SoundSettings.tscn" type="PackedScene" id=2]

[node name="Main_Menu" type="Node"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 480.0
margin_top = 225.0
margin_right = 543.0
margin_bottom = 375.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 63.0

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 63.0
margin_bottom = 150.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 30

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
margin_right = 63.0
margin_bottom = 20.0
text = "Play"

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
margin_top = 50.0
margin_right = 63.0
margin_bottom = 70.0
text = "Settings"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
margin_top = 100.0
margin_right = 63.0
margin_bottom = 120.0
text = "Exit"

[node name="PopupPanel" parent="." instance=ExtResource( 2 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -200.0
margin_right = 125.0
margin_bottom = 200.0
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer2/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer2/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer2/Exit" to="." method="_on_Exit_pressed"]
